almost ready draft

--- a/ch1-intro.tex
+++ b/ch1-intro.tex
@@ -84,7 +84,7 @@ Researchers prescribing to this school-of-thought argue that high dimensional pr
 
 \section{Score-Matching for Predicting Anomalies}
 
-In this thesis, I will develop a case for a particular methodology, called denoising score matching, as a promising solution to unsupervised anomaly detection. A \textit{score} is defined as the gradient of the log-probability-density with respect to the data. Conceptually, a score is a vector field that points in the direction where the likelihood increases the most. Score matching is a technique that is utilized to estimate this vector. In doing so, score matching estimates how far a given data point is from the data distribution. In the context of anomaly detection, score matching offers a powerful, yet under-explored, tool to discern pathological patterns from normal variations.
+In this thesis, I will develop a case for a particular methodology, called denoising score matching, as a promising solution to unsupervised anomaly detection. A \textit{score} is defined as the gradient of the log-probability-density with respect to the data. Conceptually, a score is a vector field that points in the direction where the likelihood increases the most. Score matching is a technique that is utilized to estimate this vector. Intuitively, score matching estimates how far a given data point is from the data distribution. In the context of anomaly detection, score matching offers a powerful, yet under-explored, tool to discern pathological patterns from normal variations.
 
 I posit that a multi-scale analysis of score estimates can effectively identify anomalies stemming from multiple underlying factors. In this research, ``multi-scale" refers to the multiple levels of noise that are used to perturb the data. Intuitively, higher noise levels obscure local information, forcing the model to learn more global patterns. Therefore, by utilizing multiple noise levels during training, both global and local contextual features can be captured. This multi-scale capacity is particularly beneficial for anomaly detection in medical images, where anomalies may manifest as localized textures or as large-scale structures.
 
