--- a/ch5-spatial.tex
+++ b/ch5-spatial.tex
@@ -56,7 +56,7 @@ This section focuses on the task of segmenting anomalies in 2D images due to the
 
 Most existing methods are trained and tested on the MvTec anomaly detection dataset~\cite{Bergmann_2019_CVPR}. This dataset focuses on industrial inspection and comprises of a set of defect-free training images and a test set of images with various kinds of manufacturing defects. The test set includes high resolution segmentation maps which allow us to validate the performance of the anomaly detection model. Note that the difficulty of this task stems from its unsupervised nature. At training time, the model will only see typical images and it cannot assume anything about the defects at the testing stage.
 
-Similar to MSMA, Spatial-MSMA is trained in two stages. First, a score matching model is trained on the images and then the weights are frozen. Next, a likelihood model is trained on the score norms of the images. Unlike MSMA however, in Spatial-MSMA the likelihood model is trained on score norms of \textit{patches} rather than on score norms of entire images.
+Similar to MSMA, Spatial-MSMA is trained in two stages. First, a score matching model is trained on the images and then the weights are frozen. Next, a likelihood model is trained on the score norms of the images. However, unlike MSMA, in Spatial-MSMA the likelihood model is trained on score norms of \textit{patches} rather than on score norms of entire images.
 
 \subsection*{Experiment Details and Results}
 To train the score-matching model, I finetuned a publicly available checkpoint~\footnote{\url{https://drive.google.com/file/d/1JInV8bPGy18QiIzZcS1iECGHCuXL6_Nz/view?usp=drive_link}} of a score-based diffusion model trained on the CIFAR-10 dataset. Next, a deep normalizing flow model is trained on the score norms for each patch, where the patch size is a fixed hyper parameter. The flow model receives the positional embeddings and the feature representations of the original image as conditioning vectors. Once the flow model is trained, we can evaluate it at every patch location in the image using a sliding-window. The resulting image is a likelihood heatmap, which is inverted to get the anomaly heatmap (negative log-likelihood).
@@ -68,9 +68,9 @@ For this experiment, the score model was trained on the \textit{Cables} class. T
 Following the encouraging results on the MvTec dataset, this section will consider the more challenging task of detecting anomalies in medical images. The purpose of this case study is to reflect a real world usecase: automatic detection and segmentation of pathologies. As this is a feasibility experiment, one needs to minimize confounding factors that can be introduced due to a distributional shift between the training and testing populations. Thus, the anomalies will be simulated on a held out inlier test set, ensuring that the introduced anomalies are the \textit{primary} factor differentiating the test set from the inlier population.
 
 \subsection*{Experiment Details}
-The model is trained on a population of typically developing adolescent brains, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. The images were downsampled to a pixel spacing of 2mm isotropic, cropped by the largest brain mask with some additional padding. The resulting 3D volume is of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
+The model is trained on a population of typically developing adolescent brains, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. As the images are high-resolution 3D MRIs, they require a lot of GPU memory during training. In order to fit a batch size of 4 per GPU, the images were downsampled to a pixel spacing of 2mm isotropic. They were further cropped by the largest brain mask, computed from the training data. After some padding to make the images multiples of 2, the resulting 3D volume was of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
 
-The score-norms were retrieved from a diffusion model, using a 3D convolutional UNet-like architecture. I used the VESDE formulation, with 1000 timesteps. The minimum sigma was set to $<MIN>$ and the maximum was computed from the maximum pairwise distance in the training set $<MAX>$. The model was trained for 1.5 million iterations. The batch size was doubled at roughly the half way point during training. This is a simple yet effective method proposed by~\cite{le2018dont}, to effectively anneal the learning rate without having to use a decay schedule. The authors also found that increasing the batch size also reduced the number of parameter updates required to reach the same test accuracies as the learning rate decay setting.
+The score-norms were retrieved from a diffusion model, using a 3D convolutional UNet-like architecture. The VESDE formulation was used, with 2000 timesteps. The minimum sigma was set to 0.06, which is the average standard deviation of the image intensities. This is done so that smallest noise scale, at minimum, is able to capture the intensity variation of within an image. Following the suggestion of ~\cite{song2020score}, the maximum sigma was set to 545.0 which is the 99-th percentile of the pairwise distance in the training set. This is done to allow the largest noise distribution to maximally cover the support of the data distribution i.e. $p_{\sigma_\text{max}}(x) \approx \mathcal{N}(x| 0, \sigma_\text{max}^2I)$. The model was trained for 1.5 million iterations, by which point the validation loss had started to flatten out. The batch size was doubled at roughly the half way point during training. This is a simple yet effective method proposed by~\cite{le2018dont}, to effectively anneal the learning rate without having to use a decay schedule. The authors also found that increasing the batch size also reduced the number of parameter updates required to reach the same test accuracies as strategies for decaying the learning rate.
 
 During inference, the voxel-wise anomaly scores are first brain masked followed by thresholding. The threshold is determined for each sample by searching for the threshold that gives the lowest symmetric mean surface distance between the ground truth and the post-threshold segmentation. Searching for a threshold like this is common practice in evaluating anomaly detectors~\cite{baur_deep_2019}. The segmentations are post-processed by removing connected components of size less than 3 voxels (using a connectivity of 1). The remaining segmentation mask is dilated via a disk of radius 1 as the structuring element. Note that this inference procedure is performed for all methods tested in the experiment.
 
