--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,73 @@
+@article{ha2018world,
+  title={World models},
+  author={Ha, David and Schmidhuber, J{\"u}rgen},
+  journal={arXiv preprint arXiv:1803.10122},
+  year={2018}
+}
+
+@incollection{achenbachChildBehaviorChecklist1999,
+  title = {The {{Child Behavior Checklist}} and Related Instruments.},
+  booktitle = {The Use of Psychological Testing for Treatment Planning and Outcomes Assessment, 2nd Ed.},
+  author = {Achenbach, Thomas M.},
+  date = {1999},
+  pages = {429--466},
+  publisher = {Lawrence Erlbaum Associates Publishers},
+  location = {Mahwah,  NJ,  US},
+  isbn = {0-8058-2761-7 (Hardcover)},
+  keywords = {*Behavior Problems,*Child Behavior Checklist,*Emotional Disturbances,*Treatment Outcomes,*Treatment Planning,Checklist (Testing),Competence}
+}
+
+@book{dumontEssentialsDASIIAssessment2009,
+  title = {Essentials of {{DAS-II}}® Assessment.},
+  author = {Dumont, Ron and Willis, John O. and Elliott, Colin D.},
+  date = {2009},
+  series = {Essentials of {{DAS-II}}® Assessment.},
+  pages = {xiv, 401},
+  publisher = {John Wiley \& Sons Inc},
+  location = {Hoboken,  NJ,  US},
+  isbn = {978-0-470-22520-2 (Paperback)},
+  pagetotal = {xiv, 401},
+  keywords = {*Cognitive Ability,*Cognitive Assessment,*Scoring (Testing),*Test Administration,*Test Interpretation,Ability Level}
+}
+
+@incollection{sparrowVinelandAdaptiveBehavior1989,
+  title = {The {{Vineland Adaptive Behavior Scales}}.},
+  booktitle = {Major Psychological Assessment Instruments, {{Vol}}. 2.},
+  author = {Sparrow, Sara S. and Cicchetti, Domenic V.},
+  date = {1989},
+  pages = {199--231},
+  publisher = {Allyn \& Bacon},
+  location = {Needham Heights,  MA,  US},
+  isbn = {0-205-08457-5 (Hardcover); 0-205-11923-9 (Hardcover)},
+  keywords = {*Intellectual Development Disorder,*Personality Measures,*Testing,Adaptive Testing,Behavioral Assessment,Vineland Social Maturity Scale}
+}
+
+@misc{zoph2022stmoe,
+      title={ST-MoE: Designing Stable and Transferable Sparse Expert Models}, 
+      author={Barret Zoph and Irwan Bello and Sameer Kumar and Nan Du and Yanping Huang and Jeff Dean and Noam Shazeer and William Fedus},
+      year={2022},
+      eprint={2202.08906},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{
+lou2024discrete,
+title={Discrete Diffusion Language Modeling by Estimating the Ratios of the Data Distribution},
+author={Aaron Lou and Chenlin Meng and Stefano Ermon},
+year={2024},
+url={https://openreview.net/forum?id=71mqtQdKB9}
+}
+
+@misc{graves2024bayesian,
+      title={Bayesian Flow Networks}, 
+      author={Alex Graves and Rupesh Kumar Srivastava and Timothy Atkinson and Faustino Gomez},
+      year={2024},
+      eprint={2308.07037},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 @article{benjamini1995controlling,
   title={Controlling the false discovery rate: a practical and powerful approach to multiple testing},
   author={Benjamini, Yoav and Hochberg, Yosef},
